--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,25 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    def room_version = '2.2.2'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+    // optional - Kotlin Extensions and Coroutines support for Room
+//    implementation "androidx.room:room-ktx:$room_version"
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:$room_version"
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:$room_version"
+    // Test helpers
+//    testImplementation "androidx.room:room-testing:$room_version"
+    // GEOCODE API
+    implementation 'com.google.maps:google-maps-services:0.9.0'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
+    //GOOGLE PLAY SERVICES
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+//    def multidex_version = '2.0.1'
+//    implementation "androidx.multidex: multidex: $multidex_version"
 }
