--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     //GSON
     implementation 'com.google.code.gson:gson:2.8.6'
+    //ChrystalSeekBar
+    implementation 'com.crystal:crystalrangeseekbar:1.1.3'
 }
