--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,15 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/ic_real_estate_m"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@drawable/ic_real_estate_m"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <provider
                 android:name=".contentProvider.PropertyContentProvider"
-                android:authorities="com.openclassrooms.savemytrip.provider"
-                android:exported="true"/>
+                android:authorities="com.gael.openclassrooms.realestatemanager.provider"
+                android:exported="false"/>
         <activity android:name=".controllers.activities.CreateEstateActivity">
         </activity>
         <activity android:name=".controllers.activities.DetailActivity">
