content providers ok et test so

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'GoogleSecAPIKEY', GoogleApiKey
+    }
 }
 
 
@@ -40,6 +43,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:core:1.3.0-alpha04'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestCompile "android.arch.core:core-testing:1.1.1"
     //ROOM
     def room_version = '2.2.3'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
