--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 android.databinding.incremental=true
+GoogleApiKey = "AIzaSyCCjy4vvQ8_U_3qELz9v_W2hKApVg3Nbws"
