--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test:core:1.3.0-alpha04'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestCompile "android.arch.core:core-testing:1.1.1"
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
     //ROOM
     def room_version = '2.2.3'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
