--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         package="com.cheyrouse.gael.realestatemanagerkt">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -8,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
             android:allowBackup="true"
@@ -16,16 +17,17 @@
             android:label="@string/app_name"
             android:roundIcon="@drawable/ic_real_estate_m"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            tools:ignore="AllowBackup">
         <provider
                 android:name=".contentProvider.PropertyContentProvider"
                 android:authorities="com.gael.openclassrooms.realestatemanager.provider"
-                android:exported="false"/>
-        <activity android:name=".controllers.activities.CreateEstateActivity">
-        </activity>
-        <activity android:name=".controllers.activities.DetailActivity">
-        </activity>
-        <activity android:name=".controllers.activities.MainActivity">
+                android:exported="false" />
+
+        <activity android:name=".controllers.activities.CreateEstateActivity"/>
+        <activity android:name=".controllers.activities.DetailActivity"/>
+        <activity android:name=".controllers.activities.MainActivity"/>
+            <activity android:name=".controllers.activities.PreviewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -33,7 +35,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/google_maps_key"/>
+
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key" />
     </application>
 
 </manifest>
