--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     //ChrystalSeekBar
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha04'
 }
