Corrections check internet. Refactoring EspressoTest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -23,9 +24,10 @@
                 android:name=".contentProvider.PropertyContentProvider"
                 android:authorities="com.gael.openclassrooms.realestatemanager.provider"
                 android:exported="false" />
-
-        <activity android:name=".controllers.activities.CreateEstateActivity"/>
-        <activity android:name=".controllers.activities.DetailActivity"/>
+        <activity android:name=".controllers.activities.CreateEstateActivity"
+                android:parentActivityName=".controllers.activities.MainActivity"/>
+        <activity android:name=".controllers.activities.DetailActivity"
+                android:parentActivityName=".controllers.activities.MainActivity"/>
         <activity android:name=".controllers.activities.MainActivity"/>
             <activity android:name=".controllers.activities.PreviewActivity">
             <intent-filter>
