--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+            android:name=".RealEstateManagerApplication"
             android:allowBackup="true"
             android:icon="@drawable/ic_real_estate_m"
             android:label="@string/app_name"
