--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test:core:1.3.0-alpha05'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation 'org.robolectric:robolectric:4.3'
     //ROOM
     def room_version = '2.2.5'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
